# https://peps.python.org/pep-0517/
[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# https://peps.python.org/pep-0621/
[project]
name = "in-n-out"
description = " plugable dependency injection and result processing"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "BSD 3-Clause License" }
authors = [{ email = "talley.lambert@gmail.com", name = "Talley Lambert" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dynamic = ["version"]
dependencies = []

# https://hatch.pypa.io/latest/config/metadata/
[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests"]

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

# extras
# https://peps.python.org/pep-0621/#dependencies-optional-dependencies
[project.optional-dependencies]
test = ["pytest>=6.0", "pytest-cov", "toolz", "pytest-codspeed"]
dev = [
    "black",
    "ruff",
    "ipython",
    "mypy",
    "pdbpp",
    "pre-commit",
    "pydocstyle",
    "pytest-cov",
    "pytest",
    "rich",
]

[project.urls]
homepage = "https://github.com/pyapp-kit/in-n-out"
repository = "https://github.com/pyapp-kit/in-n-out"
documentation = "https://pyapp-kit.github.io/in-n-out"

# https://github.com/charliermarsh/ruff
[tool.ruff]
line-length = 88
src = ["src", "tests"]
target-version = "py38"
select = [
    "E",    # style errors
    "F",    # flakes
    "D",    # pydocstyle
    "I",    # isort
    "UP",   # pyupgrade
    "S",    # bandit
    "C4",   # flake8-comprehensions
    "B",    # flake8-bugbear
    "A001", # flake8-builtins
    "RUF",  # ruff-specific rules
    "TCH",  # flake8-typing-imports
]
ignore = [
    "D100", # Missing docstring in public module
    "D107", # Missing docstring in __init__
    "D203", # 1 blank line required before class docstring
    "D212", # Multi-line docstring summary should start at the first line
    "D213", # Multi-line docstring summary should start at the second line
    "D401", # First line should be in imperative mood
    "D413", # Missing blank line after last section
    "D416", # Section name should end with a colon
    "C901", # complexity
]

[tool.ruff.per-file-ignores]
"tests/*.py" = ["D", "S"]
"benchmarks/*.py" = ["D"]
"setup.py" = ["D"]
"src/in_n_out/_global.py" = ["D"]

# https://docs.pytest.org/en/6.2.x/customize.html
[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
filterwarnings = ["error"]

[tool.coverage.run]
source = ['src/in_n_out']
command_line = "-m pytest"

# https://coverage.readthedocs.io/en/6.4/config.html
[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@overload",
    "except ImportError",
]
show_missing = true

# https://mypy.readthedocs.io/en/stable/config_file.html
[tool.mypy]
files = "src/**/*.py"
strict = true
disallow_any_generics = false
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = ["tests"]
disallow_untyped_defs = false

# https://github.com/mgedmin/check-manifest#configuration
[tool.check-manifest]
ignore = [
    ".cruft.json",
    ".flake8",
    ".github_changelog_generator",
    ".pre-commit-config.yaml",
    "tests/**/*",
    "**/*.c",
    "Makefile",
    "codecov.yml",
    "asv.conf.json",
    "benchmarks/**/*",
    "CHANGELOG.md",
]
